--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/p5": "^1.7.6",
     "gh-pages": "^6.3.0",
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "p5": "^1.11.3"
   }
 }
